# switchback

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  update_tests.sh  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
coverage/: coverage-final.json  index.html
coverage/main/: index.html  vite.config.ts.html
coverage/main/examples/: app.tsx.html  index.html  main.ts.html
coverage/main/src/: index.html  index.ts.html
examples/: README.md  app.tsx  index.html  main.ts  server-example.php
examples/demos/asm/: Dockerfile  README.md  app.ts  docker-compose.yml  package.json  server.s
examples/demos/c/: .gitignore  Dockerfile  README.md  app.ts  docker-compose.yml  package.json  server.c
examples/demos/csharp/: .gitignore  Dockerfile  Program.cs  README.md  app.ts  docker-compose.yml  package.json  vite.config.ts
examples/demos/deno/: Dockerfile  README.md  app.ts  deno.json  docker-compose.yml  server.ts  shared-types.ts
examples/demos/erlang/: .npmrc  Dockerfile  README.md  docker-compose.yml  package.json  rebar.config  vite.config.ts
examples/demos/go/: Dockerfile  README.md  app.ts  docker-compose.yml  package.json  server.go
examples/demos/ocaml/: Dockerfile  README.md  app.ts  docker-compose.yml  dune  dune-project  package.json  server.ml  vite.config.ts
examples/demos/php/: Dockerfile  README.md  app.ts  docker-compose.yml  entrypoint.sh  index.php  package.json  vite.config.ts
examples/demos/rust/: Cargo.toml  Dockerfile  README.md  app.ts  docker-compose.yml  package.json  server.rs
examples/demos/rust/public/samples/: CREDITS.md
examples/demos/rust/src/: lib.rs
examples/demos/zig/: .npmrc  Dockerfile  README.md  app.ts  docker-compose.yml  server.zig
examples/recipes/c/: Dockerfile  README.md  docker-compose.yml  server.c
examples/recipes/go/: app.ts  (+4 more)
src/: index.test.ts  index.ts
(+44 files in other folders)
