[package]
name = "rust-recipe"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rust-recipe"
path = "server.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dependencies for the WASM library
wasm-bindgen = "0.2"
js-sys = "0.3"

# Dependencies only for the binary (server)
chrono = { version = "0.4", optional = true }
signal-hook = { version = "0.3", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
urlencoding = { version = "2.1", optional = true }

[features]
default = []
server = ["chrono", "signal-hook", "rusqlite", "serde", "serde_json", "urlencoding"]

[profile.release]
opt-level = 3
lto = true
