[package]
name = "rust-recipe"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rust-recipe"
path = "server.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Dependencies for the WASM library
wasm-bindgen = "0.2"
js-sys = "0.3"

# Dependencies only for the binary (server)
signal-hook = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
image = { version = "0.24", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[features]
default = []
server = ["signal-hook", "serde", "serde_json", "image", "uuid"]

[profile.release]
opt-level = 3
lto = true
