[package]
name = "rust-recipe"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rust-recipe"
path = "server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
image = { version = "0.24" }
signal-hook = { version = "0.3" }

[profile.release]
opt-level = 3
lto = true
